Add ergast-layer for getting historical race data

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "Get historical and live Formula 1 (F1) data"
 license-file = "LICENSE"
 keywords = ["F1", "Formula1", "Racing", "Motorsport"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
