--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ keywords = ["F1", "Formula1", "Racing", "Motorsport"]
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+thiserror = "1"
