--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "f1-rs"
+name = "f1"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/yvessavoy/f1-rs"
@@ -13,3 +13,5 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
+lazy_static = "1.4"
+chrono = "0.4"
